# libhal-lpc40

./: .cspell.json  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: 3.0.0-alpha.1.yml  build.yml  ci.yml  deploy-version.yml  deploy.yml  presubmit.yml
cmake/: arm-gcc-toolchain.cmake
conan/profiles/: lpc40  lpc4072  lpc4074  lpc4076  lpc4078  lpc4088
conan/profiles/v2/: lpc40  lpc4072  lpc4074  lpc4076  lpc4078  lpc4088
demos/: CMakeLists.txt  conanfile.py  conanfile.txt  i2c.cpp  lpc4072.ld  lpc4074.ld  lpc4088.ld  main.cpp  output_pin.cpp  profile  uart.cpp
demos/adc/: CMakeLists.txt  adc.cpp  main.cpp
demos/applications/: adc.cpp  blank.cpp  blinker.cpp  can.cpp  empty.cpp  gpio.cpp  i2c.cpp  interrupt_pin.cpp  pwm.cpp  spi.cpp  uart.cpp  usb.cpp
demos/blinker/: CMakeLists.txt  blinker.cpp  conanfile.txt  main.cpp
demos/can/: CMakeLists.txt  main.cpp
demos/captures/: spi.sal
demos/cmake/: toolchain-arm-none-eabi.cmake  toolchain.cmake
demos/empty/: CMakeLists.txt  empty.cpp  main.cpp
demos/fixed_v_float/: CMakeLists.txt  libembeddedhal.tweaks.hpp  main.cpp
demos/float/: CMakeLists.txt  float.cpp
demos/gpio/: CMakeLists.txt  conanfile.txt  gpio.cpp  libembeddedhal.tweaks.hpp  libhal.tweaks.hpp  main.cpp
demos/i2c/: CMakeLists.txt  i2c.cpp
demos/interrupt_pin/: CMakeLists.txt  interrupt_pin.cpp  main.cpp
demos/uart/: CMakeLists.txt  main.cpp  uart.cpp
docs/: config.toml  doxygen.conf
docs/captures/pwm/: demo.sal
docs/content/contribution/: _index.md
docs/layouts/partials/: logo.html
hello_world/: CMakeLists.txt  conanfile.txt  main.cpp
include/libhal-lpc40/: adc.hpp  can.hpp  clock.hpp  constants.hpp  i2c.hpp  input_pin.hpp  interrupt_pin.hpp  output_pin.hpp  pin.hpp  power.hpp  pwm.hpp  spi.hpp  system_controller.hpp  uart.hpp  usb_interface.hpp  usb_structures.hpp
include/libhal-lpc40/internal/: gpio.hpp  pin.hpp  platform_check.hpp  uart.hpp
include/libhal-lpc40xx/: adc.hpp  can.hpp  i2c.hpp  input_pin.hpp  interrupt_pin.hpp  output_pin.hpp  uart.hpp
include/libhal-lpc40xx/incomplete_drivers/: i2c.hpp.ignore
include/libhal-lpc40xx/internal/: gpio.hpp
include/liblpc40xx/: adc.hpp  can.hpp  constants.hpp  i2c.hpp  input_pin.hpp  interrupt_pin.hpp  output_pin.hpp  spi.hpp  startup.hpp  system_controller.hpp  uart.hpp
include/liblpc40xx/incomplete_drivers/: can.hpp.ignore  i2c.hpp  i2c.hpp.ignore
include/liblpc40xx/internal/: constants.hpp  gpio.hpp  pin.hpp  platform_check.hpp  system_controller.hpp  uart.hpp
liblpc40xx/: adc.cpp  adc.hpp  adc.test.cpp  can.hpp  gpio_constants.hpp  i2c.cpp  i2c.hpp  input_pin.cpp  input_pin.hpp  input_pin.test.cpp  interrupt_pin.cpp  interrupt_pin.hpp  interrupt_pin.test.cpp  output_pin.cpp  output_pin.hpp  output_pin.test.cpp  pin.hpp  startup.hpp  uart.hpp  uart.test.cpp
liblpc40xx/internal/: constants.hpp  gpio.hpp  pin.hpp  system_controller.hpp  uart.hpp
liblpc40xx/peripherals/: adc.hpp  adc.test.cpp  can.hpp  can.test.cpp  dac.hpp  dac.test.cpp  eeprom.hpp  eeprom.test.cpp  gpio.hpp  gpio.test.cpp  i2c.hpp  i2c.test.cpp  pin.hpp  pin.test.cpp  pulse_capture.hpp  pulse_capture.test.cpp  pwm.hpp  pwm.test.cpp  spi.hpp  spi.test.cpp  system_controller.hpp  system_controller.test.cpp  timer.hpp  timer.test.cpp  uart.hpp  uart.test.cpp  watchdog.hpp  watchdog.test.cpp
liblpc40xx/platform/: constants.hpp  default.ld  gcc.txt  lpc40xx.hpp  openocd.cfg  startup.cpp  startup.hpp
linker/: common.ld  lpc4076.ld
linker_scripts/libhal-lpc40/: lpc4072.ld  lpc4074.ld  lpc4076.ld
linkers/libhal-lpc40xx/: lpc4072.ld  lpc4076.ld  lpc4078.ld
src/: adc.cpp  adc_reg.hpp  can.cpp  can_reg.hpp  clock.cpp  gpio_reg.hpp  i2c.cpp  i2c_reg.hpp  input_pin.cpp  interrupt_pin.cpp  interrupt_pin_reg.hpp  output_pin.cpp  pin.cpp  pin_reg.hpp  power.cpp  pwm.cpp  pwm_reg.hpp  spi.cpp  spi_reg.hpp  system_controller_reg.hpp  uart.cpp  uart_clock.hpp  uart_reg.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  adc.test.cpp  can.test.cpp  conanfile.py  conanfile.txt  i2c.test.cpp  input_pin.test.cpp  interrupt_pin.test.cpp  main.test.cpp  output_pin.test.cpp  pwm.test.cpp  run.sh  spi.test.cpp  system_controller.test.cpp  uart.test.cpp  unity.test.cpp
tests/incomplete_drivers/: can.hpp  i2c.hpp
